--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <link rel="stylesheet" href="./styles/pagination.css" />
     <title>Brewery Tours</title>
   </head>
   <body>
@@ -32,24 +34,28 @@
           </select>
         </form>
       </aside>
-      <h1>List of Breweries</h1>
-      <header class="search-bar">
-        <form id="search-breweries-form" autocomplete="off">
-          <label for="search-breweries"><h2>Search breweries:</h2></label>
-          <input id="search-breweries" name="search-breweries" type="text">
-        </form>
-      </header>
+      <div>
+        
+        <h1>List of Breweries</h1>
+        <header class="search-bar">
+          <form id="search-breweries-form" autocomplete="off">
+            <label for="search-breweries"><h2>Search breweries:</h2></label>
+            <input id="search-breweries" name="search-breweries" type="text">
+          </form>
+        </header>
       <article>
         <ul id="breweries-list" class="breweries-list">
           <!--
-          For each brewery returned in the search, 
-          add to the list using the HTML provided 
-          in templates/standard-list-items.html
-          -->
-        </ul>
-      </article>
-    </main>
-    <script type="module" src="./scripts/documentLoad.js" defer></script>
+            For each brewery returned in the search, 
+            add to the list using the HTML provided 
+            in templates/standard-list-items.html
+            -->
+          </ul>
+        </article>
+        <div id="pagination" class="pagination"></div>
+      </div>
+      </main>
+      <script type="module" src="./scripts/documentLoad.js" defer></script>
     <script type="module" src="./scripts/filterBreweries.js" defer></script>
   </body>
 </html>
